# matrix-mul

./: Cargo.toml  input.txt
src/: main.rs
