[package]
name = "matrix-mul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.5.2"
crossbeam = "0.8.1"
clap = { version = "3.2.5", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-scoped = "0.2.0"